08-ingress/02-traefik-ingress-controller/http-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    #traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /v2
        backend:
          serviceName: web-v2
          servicePort: http
      - path: /v1
        backend:
          serviceName: web-v1
          servicePort: http
